<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal">


    <Button
        android:id="@+id/btn1"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1" />


    <Button
        android:id="@+id/btn2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2" />

    <Button
        android:id="@+id/btn3"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3" />

    <Button
        android:id="@+id/btn_plus"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus" />

    <Button
        android:id="@+id/btn4"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4" />

    <Button
        android:id="@+id/btn5"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5" />

    <Button
        android:id="@+id/btn6"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6" />

    <Button
        android:id="@+id/btn_minus"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus" />

    <Button
        android:id="@+id/btn7"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7" />

    <Button
        android:id="@+id/btn8"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8" />

    <Button
        android:id="@+id/btn9"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9" />

    <Button
        android:id="@+id/btn_multiply"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply" />

    <Button
        android:id="@+id/btn0"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/button0" />

    <Button
        android:id="@+id/btn_dot"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dot" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_equal" />

    <Button
        android:id="@+id/btn_split"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_split" />

</GridLayout>